<resources>
    <string name="title_auth">Auth</string>
    <string name="enter_email">Email</string>
    <string name="enter_mobile">Mobile number</string>
    <string name="enter_password">password</string>
    <string name="login">Login</string>
    <string name="username_length_error">Username should be minimum 5 characters</string>
    <string name="error_invalid_email_address">Please enter valid Email</string>
    <string name="don_t_have_account">Don\'t have an account?</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="sign_up">" "<u>Sign Up</u></string>
    <string name="_sign_up">Sign Up</string>
    <string name="email_username">Email/Username</string>
    <string name="gender">Gender</string>
    <string name="password">Password</string>
    <string name="first_name_mandatory">First Name</string>`
    <string name="last_name_mandatory">Last Name</string>
    <string name="email_username_mandatory">Email/Username*</string>
    <string name="password_mandatory">Password</string>
    <string name="con_password_mandatory">Confirm Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="forgot_password_title">Forgot Password</string>
    <string name="login_here">" "<u>Login here</u></string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="mobile_number_invalid">Mobile number is not valid</string>
    <string name="mobile_number_error">Mobile number can\'t be empty</string>
    <string name="first_name_error">First Name can\'t be empty</string>
    <string name="last_name_error">Last Name can\'t be empty</string>
    <string name="password_empty_error">Password can\'t be empty</string>
    <string name="email_empty_error">Email can\'t be empty</string>
    <string name="con_password_empty_error">Confirm Password can\'t be empty</string>
    <string name="password_not_same">Password and Confirm Password do not match</string>
    <string name="error_invalid_email">Please enter valid Email/Username</string>
    <string name="password_invalid">Password must be at least 6 characters long</string>
    <string name="con_password_invalid">Confirm Password must be at least 6 characters long</string>
    <string name="user_not_exist">Email Address does not exist.</string>
    <string name="invalid_credential">Please enter valid Email and password</string>
</resources>