<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="com.auth.login.LoginField" />

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.auth.login.LoginViewModel" />

        <variable
            name="mViewModel"
            type="com.auth.login.LoginViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_20dp"
            android:layout_marginRight="@dimen/_20dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/signUp"
                style="@style/TextView.Body.Heading5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30dp"
                android:gravity="center"
                android:text="@string/login" />
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tiUserName"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30dp"
                android:hint="@string/enter_email">

                <com.aucto.core.MaterialEditText
                    android:id="@+id/textLogin"
                    style="@style/Material.EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:onTextChanged="@{(text, start, before, count) -> viewModel.afterTextChange(LoginField.USER_NAME,text.toString())}"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tiPassword"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15dp"
                android:hint="@string/enter_password"
                app:passwordToggleEnabled="true">

                <com.aucto.core.MaterialEditText
                    android:id="@+id/textPassword"
                    style="@style/Material.EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:onTextChanged="@{(text, start, before, count) -> viewModel.afterTextChange(LoginField.PASSWORD,text.toString())}"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btnLogin"
            style="@style/Material.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_20dp"
            android:onClick="@{()->viewModel.onLoginClick()}"
            android:text="@string/login" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_20dp"
            android:layout_marginRight="@dimen/_20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtAccount"
                style="@style/TextView.Body"
                android:layout_width="wrap_content"
                android:gravity="center"
                android:paddingTop="@dimen/_10dp"
                android:paddingBottom="@dimen/_10dp"
                android:text="@string/don_t_have_account" />

            <TextView
                android:id="@+id/txtSignup"
                style="@style/TextView.Body.Bold"
                android:layout_width="wrap_content"
                android:autoLink="all"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center"
                android:onClick="@{()->viewModel.onSignUpClick()}"
                android:paddingTop="@dimen/_10dp"
                android:paddingBottom="@dimen/_10dp"
                android:selectAllOnFocus="false"
                android:text="@string/sign_up" />
        </LinearLayout>

    </LinearLayout>
    </ScrollView>
</layout>